# LCContent

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.txt  Makefile  README.md
cmake/: LCContentConfig.cmake.in  LCContentCreateConfig.cmake
include/: LCContent.h
include/LCCheating/: CheatingClusterCleaningAlgorithm.h  CheatingParticleIDAlgorithm.h  CheatingTrackToClusterMatching.h  PerfectClusteringAlgorithm.h  PerfectFragmentRemovalAlgorithm.h  PerfectParticleFlowAlgorithm.h
include/LCClustering/: ClusteringParentAlgorithm.h  ConeClusteringAlgorithm.h  ForcedClusteringAlgorithm.h
include/LCFragmentRemoval/: BeamHaloMuonRemovalAlgorithm.h  MainFragmentRemovalAlgorithm.h  MergeSplitPhotonsAlgorithm.h  NeutralFragmentRemovalAlgorithm.h  PhotonFragmentMergingAlgorithm.h  PhotonFragmentMergingBaseAlgorithm.h  PhotonFragmentRemovalAlgorithm.h  RecoPhotonFragmentMergingAlgorithm.h
include/LCHelpers/: ClusterHelper.h  ReclusterHelper.h  SortingHelper.h
include/LCMonitoring/: ClusterComparisonAlgorithm.h  DumpPfosMonitoringAlgorithm.h  EfficiencyMonitoringAlgorithm.h  VisualMonitoringAlgorithm.h
include/LCObjects/: LCTrack.h
include/LCParticleId/: FinalParticleIdAlgorithm.h  MuonReconstructionAlgorithm.h  PhotonReconstructionAlgorithm.h  PhotonRecoveryAlgorithm.h  PhotonSplittingAlgorithm.h
include/LCPersistency/: LCEventReadingAlgorithm.h  LCEventWritingAlgorithm.h
include/LCPfoConstruction/: CLICPfoSelectionAlgorithm.h  PfoCreationAlgorithm.h  PfoCreationParentAlgorithm.h  V0PfoCreationAlgorithm.h
include/LCPlugins/: ALLEGROPseudoLayerPlugin.h  LCParticleIdPlugins.h  LCShowerProfilePlugin.h  LCSoftwareCompensation.h
include/LCReclustering/: ExitingTrackAlg.h  ForceSplitTrackAssociationsAlg.h  ResolveTrackAssociationsAlg.h  SplitMergedClustersAlg.h  SplitTrackAssociationsAlg.h  TrackDrivenAssociationAlg.h  TrackDrivenMergingAlg.h
include/LCTopologicalAssociation/: BackscatteredTracks2Algorithm.h  BackscatteredTracksAlgorithm.h  BrokenTracksAlgorithm.h  ConeBasedMergingAlgorithm.h  HighEnergyPhotonRecoveryAlgorithm.h  IsolatedHitMergingAlgorithm.h  LoopingTracksAlgorithm.h  MipPhotonSeparationAlgorithm.h  MuonClusterAssociationAlgorithm.h  MuonPhotonSeparationAlgorithm.h  ProximityBasedMergingAlgorithm.h  ShowerMipMerging2Algorithm.h  ShowerMipMerging3Algorithm.h  ShowerMipMerging4Algorithm.h  ShowerMipMergingAlgorithm.h  SoftClusterMergingAlgorithm.h  TopologicalAssociationParentAlgorithm.h
include/LCTrackClusterAssociation/: LoopingTrackAssociationAlgorithm.h  TrackClusterAssociationAlgorithm.h  TrackRecoveryAlgorithm.h  TrackRecoveryHelixAlgorithm.h  TrackRecoveryInteractionsAlgorithm.h
include/LCUtility/: CaloHitPreparationAlgorithm.h  ClusterPreparationAlgorithm.h  EventPreparationAlgorithm.h  KDTreeLinkerAlgoT.h  KDTreeLinkerToolsT.h  PfoPreparationAlgorithm.h  QuickUnion.h  TrackPreparationAlgorithm.h  TrainingSoftwareCompensation.h
src/: LCContent.cc
src/LCCheating/: CheatingParticleIDAlgorithm.cc  CheatingTrackToClusterMatching.cc  PerfectClusteringAlgorithm.cc  PerfectFragmentRemovalAlgorithm.cc  PerfectParticleFlowAlgorithm.cc
src/LCClustering/: ConeClusteringAlgorithm.cc  ForcedClusteringAlgorithm.cc
src/LCFragmentRemoval/: BeamHaloMuonRemovalAlgorithm.cc  MainFragmentRemovalAlgorithm.cc  MergeSplitPhotonsAlgorithm.cc  NeutralFragmentRemovalAlgorithm.cc  PhotonFragmentMergingBaseAlgorithm.cc  PhotonFragmentRemovalAlgorithm.cc  RecoPhotonFragmentMergingAlgorithm.cc
src/LCHelpers/: ClusterHelper.cc  FragmentRemovalHelper.cc  SortingHelper.cc
src/LCMonitoring/: ClusterComparisonAlgorithm.cc  DumpPfosMonitoringAlgorithm.cc  EfficiencyMonitoringAlgorithm.cc  VisualMonitoringAlgorithm.cc
src/LCParticleId/: FinalParticleIdAlgorithm.cc  MuonReconstructionAlgorithm.cc  PhotonReconstructionAlgorithm.cc  PhotonRecoveryAlgorithm.cc  PhotonSplittingAlgorithm.cc
src/LCPersistency/: LCEventReadingAlgorithm.cc  LCEventWritingAlgorithm.cc
src/LCPfoConstruction/: PfoCreationAlgorithm.cc  V0PfoCreationAlgorithm.cc
src/LCPlugins/: ALLEGROPseudoLayerPlugin.cc  LCEnergyCorrectionPlugins.cc  LCParticleIdPlugins.cc  LCPseudoLayerPlugin.cc  LCShowerProfilePlugin.cc  LCSoftwareCompensation.cc
src/LCReclustering/: ExitingTrackAlg.cc  ForceSplitTrackAssociationsAlg.cc  ResolveTrackAssociationsAlg.cc  SplitMergedClustersAlg.cc  SplitTrackAssociationsAlg.cc  TrackDrivenAssociationAlg.cc
src/LCTopologicalAssociation/: ConeBasedMergingAlgorithm.cc  HighEnergyPhotonRecoveryAlgorithm.cc  IsolatedHitMergingAlgorithm.cc  MipPhotonSeparationAlgorithm.cc  MuonClusterAssociationAlgorithm.cc  MuonPhotonSeparationAlgorithm.cc  ProximityBasedMergingAlgorithm.cc  SoftClusterMergingAlgorithm.cc
src/LCTrackClusterAssociation/: LoopingTrackAssociationAlgorithm.cc  TrackClusterAssociationAlgorithm.cc  TrackRecoveryAlgorithm.cc  TrackRecoveryHelixAlgorithm.cc  TrackRecoveryInteractionsAlgorithm.cc
src/LCUtility/: CaloHitPreparationAlgorithm.cc  ClusterPreparationAlgorithm.cc  EventPreparationAlgorithm.cc  KDTreeLinkerToolsT.cc  PfoPreparationAlgorithm.cc  TrackPreparationAlgorithm.cc  TrainingSoftwareCompensation.cc
